# SenseBeetle

./: .clang-format  .gitignore  .gitmodules  README.md  run.sh  run1.sh  run_single.sh  toBuild.sh  toBuild_arm.sh  toBuild_x86.sh
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/launch/: mapping_mid360.launch.py
src/FAST_LIO/src/: laserMapping.cpp
src/Point-LIO/config/: mid360.yaml
src/Point-LIO/launch/: mapping_mid360.launch.py
src/Point-LIO/src/: laserMapping.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: real_robot.launch.py
src/bringup/rviz/: multi_0.rviz  multi_1.rviz  multi_2.rviz  multi_3.rviz  multi_4.rviz  real_robot.rviz
src/explored_area/: CMakeLists.txt  package.xml
src/explored_area/launch/: explored_area.launch.py
src/explored_area/src/: explored_area.cpp
src/lidar_transform/: CMakeLists.txt  package.xml
src/lidar_transform/config/: lidar_transform_params.yaml  lidar_transform_params_v3.yaml
src/lidar_transform/launch/: lidar_transform.launch.py
src/lidar_transform/src/: lidar_transform.cpp
src/loam_interface/: CMakeLists.txt  package.xml
src/loam_interface/launch/: loam_interface.launch  loam_interface.launch.py
src/loam_interface/src/: loamInterface.cpp
src/local_bringup/: CMakeLists.txt  package.xml
src/local_bringup/launch/: real_robot.launch.py
src/local_bringup/rviz/: real_robot.rviz
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/config/: common_params.yaml  common_params_v3.yaml  common_params_v4.yaml  local_planner.yaml  local_planner_simulated.yaml  local_planner_v3.yaml  path_follower.yaml  path_follower_v4.yaml
src/local_planner/launch/: local_planner.launch  (+1 more)
src/multi_transform/: CMakeLists.txt  package.xml
src/multi_transform/include/multi_transform/: multi_transform.hpp
src/multi_transform/launch/: multi_transform.launch.py
src/multi_transform/src/: multi_transform.cpp
src/robot_communication/: CMakeLists.txt  package.xml
src/robot_communication/config/: robot_communication_params.yaml
src/robot_communication/include/robot_communication/: robot_communication.hpp
src/robot_communication/launch/: robot_communication.launch.py
src/robot_communication/src/: robot_communication.cpp
src/vehicle_simulator/: CMakeLists.txt  package.xml
src/velodyne_simulator/: README.md
src/waypoint_example/: CMakeLists.txt  package.xml
(+58 files in other folders)
